--- a/package.json
+++ b/package.json
@@ -2,41 +2,31 @@
   "name": "frontendportfolio",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
-    "@emailjs/browser": "^3.7.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "framer-motion": "^11.0.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-icons": "^5.0.0",
-    "react-scripts": "5.0.1",
-    "sass": "^1.70.0",
-    "web-vitals": "^2.1.4"
+    "@emailjs/browser": "^4.4.1",
+    "@icons-pack/react-simple-icons": "^13.11.2",
+    "framer-motion": "^12.34.0",
+    "lucide-react": "^0.563.0",
+    "motion": "^12.34.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "react-icons": "^5.5.0"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
+    "@vitejs/plugin-react": "^5.1.4",
+    "sass": "^1.97.3",
+    "vite": "^7.3.1",
+    "vitest": "^4.0.18"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui"
   }
 }
